user list and pagination ok
